src/test/ui/codemap_tests/empty_span.stderr
error[E0321]: cross-crate traits with a default impl, like `std::marker::Send`, can only be implemented for a struct/enum type, not `&'static main::Foo`
  --> $DIR/empty_span.rs:7:5
   |
LL |     unsafe impl Send for &'static Foo { }
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ can't implement cross-crate trait with a default impl for non-struct/enum type

error: aborting due to previous error

For more information about this error, try `rustc --explain E0321`.
